--- a/index.html
+++ b/index.html
@@ -11,25 +11,8 @@
                 <link rel="icon" href="icon.png" type="image/gif">
         </head>
         <body>
-                <div>
-                        <div>
-                                <h1>Type Soul</h1>
-                                <p>Type Soul is a roblox anime game inspired by the anime called "Bleach". It was created by countless hardworking developers.</p>
-                        </div>
-                        <div>
-                                <span>
-                                <h3>5 reasons why this game is my favorite!</h3>
-
-                                <ul>
-                                        <li>Type soul is a really fun game.</li>
-                                        <li>Type Soul is grindy and I love it!</li>
-                                        <li>Type Soul helps socializing.</li>
-                                        <li>Type Soul has a friendly.</li>
-                                        <li>It is a game inspired by my favorite anime.</li>
-                                </ul>
-                                </span>
-                                <p>Copyright &copy; Eddie Kurt John S. Tanawan 9-Sodium. All rights reserved.</p>
-                        </div>
-                </div>
+                <h1>Eddie's Profile</h1>
+                <p>This is a collection of details written about me!</p>
+                <a href=https://www.pinterest.com/pin/peter-griffin--398427898298349694/>Click here to know my favorite character!</a>
         </body>
 </html>
