--- a/games.html
+++ b/games.html
@@ -14,6 +14,9 @@
                 <div>
                         <div>
                                 <h1>Type Soul</h1>
+
+                                <img src = "https://www.pinterest.com/pin/typesoul--776167317025351910/" width="150px" height="150px">
+                                
                                 <p>Type Soul is a roblox anime game inspired by the anime called "Bleach". It was created by countless hardworking developers.</p>
                         </div>
                         <div>
