--- a/games.html
+++ b/games.html
@@ -15,7 +15,8 @@
                         <div>
                                 <h1>Type Soul</h1>
 
-                                <img src = "https://www.pinterest.com/pin/typesoul--776167317025351910/" width="150px" height="150px">
+                                <img src = "TypeSoul/TypeSoulScreen.jpg" width="150px" height="150px">
+                                
                                 
                                 <p>Type Soul is a roblox anime game inspired by the anime called "Bleach". It was created by countless hardworking developers.</p>
                         </div>
