--- a/games.html
+++ b/games.html
@@ -31,6 +31,12 @@
                                         <li>Type Soul has a friendly.</li>
                                         <li>It is a game inspired by my favorite anime.</li>
                                 </ul>
+                                        <span>
+                                                <h3>Here are some screenshots of the game.</h3>
+                                                <img src="TypeSoul/BloodShikai.jpg" width="200px" height="200px">
+                                                <img src="TypeSoul/Hollow.jpg" width="200px" height="200px">
+                                                <img src="TypeSoul/VastoLorde.jpg" width="200px" height="200px">
+                                        </span>
                                 </span>
                                 <p>Copyright &copy; Eddie Kurt John S. Tanawan 9-Sodium. All rights reserved.</p>
                         </div>
